vlib/v/checker/tests/static_init_err.vv
@[unsafe]
fn foo() {
	b := 23
	static aa := b
	static bb := 1 + 1
	static cc := ''.str()
}

fn main() {
	foo()
}
